cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
project(compressor LANGUAGES CXX)
SET(CUDA_SEPARABLE_COMPILATION ON)
find_package(Kokkos REQUIRED)
add_library(gf gf.cpp)
target_link_libraries(gf Kokkos::kokkos)
set_property(TARGET gf PROPERTY CXX_STANDARD 11)
set_property(TARGET gf PROPERTY PUBLIC_HEADER gaussian_filter.h)

install(TARGETS gf)
